<resources>
    <string name="app_name">Book Application</string>
    <string name="Register_book">Registro de un Libro</string>
    <string name="Genre">Género Literario</string>
    <string name="suspense">Suspenso</string>
    <string name="Terror">Terror</string>
    <string name="infantile">Infantil</string>
    <string name="fiction">Ficción</string>
    <string name="score">Calificación</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="number_four">4</string>
    <string name="number_five">5</string>
    <string name="publication_date">Fecha de Publicación</string>
    <string name="date_format">DD-MM-YYYY</string>
    <string name="save">Guardar</string>
    <string name="info">Nombre: %s \nAuthor: %s \nPáginas: %d \nResumen: %s \nGénero: %s \nCalificación: %d \n Fecha de Publicación %s</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="email">Correo Electrónico</string>
    <string name="password">Contraseña</string>
    <string name="sing_in">INICIAR SESIÓN</string>
    <string name="does_not_have_account"><u>¡No tienes cuenta Registrate!</u></string>
    <string name="repeat_password">Repita la contraseña</string>
    <string name="register">Registrar</string>
    <string name="sing_out">Cerrar Sesión</string>
    <string name="example_title">El Sicoanalista</string>
    <string name="example_author">john Katzenbach</string>
    <string name="title_activity_bottom">BottomActivity</string>
    <string name="title_list">Libros</string>
    <string name="title_new">Agregar</string>
    <string name="title_update">Editar</string>
    <string name="title_delete">Eliminar</string>
    <string name="title_activity_drawer">DrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_tabs">TabsActivity</string>
    <string name="book_name">"Nombre: "</string>
    <string name="search">Buscar</string>
    <string name="warning_title">Advertencia</string>
    <string name="delete_book_msg">¿Desea eliminar el libro %s del author %s?</string>
    <string name="cancel">Cancelar</string>
    <string name="accept">Aceptar</string>
    <string name="Author">"Author: "</string>
    <string name="number_pages">"Número de Paginas: "</string>
    <string name="resumen">"Resumen: "</string>
    <string name="update">Actualizar</string>

</resources>