<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_mobile"
    app:startDestination="@id/listFragment">

    <fragment
        android:id="@+id/newBookFragment"
        android:name="com.example.bookapplication.ui.newbook.NewBookFragment"
        android:label="@string/title_new"
        tools:layout="@layout/fragment_new_book">
        <action
            android:id="@+id/action_newBookFragment_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>
    <fragment
        android:id="@+id/listFragment"
        android:name="com.example.bookapplication.ui.list.ListFragment"
        android:label="@string/title_list"
        tools:layout="@layout/fragment_list" >
        <action
            android:id="@+id/action_listFragment_to_newBookFragment"
            app:destination="@id/newBookFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.example.bookapplication.ui.detail.DetailFragment"
        android:label="fragment_detail"
        tools:layout="@layout/fragment_detail" >
        <argument
            android:name="book"
            app:argType="com.example.bookapplication.local.Book" />
    </fragment>
    <fragment
        android:id="@+id/deleteFragment"
        android:name="com.example.bookapplication.ui.delete.DeleteFragment"
        android:label="@string/title_delete"
        tools:layout="@layout/fragment_delete" />
    <fragment
        android:id="@+id/updateFragment"
        android:name="com.example.bookapplication.ui.Update.UpdateFragment"
        android:label="@string/title_update"
        tools:layout="@layout/fragment_update" />
</navigation>